# sdk-examples

./: .bazelignore  .bazelrc  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  opencv.BUILD
.github/workflows/: build-and-test.yml
bazel/: non_module_deps.bzl
notebooks/: 001_vscode_jupyter.ipynb  002_solution_building_library.ipynb  003_world.ipynb  004_skills.ipynb  005_sequence.ipynb  006_loop_and_branch.ipynb  007_retry.ipynb  008_data_and_foreach.ipynb  009_dataflow.ipynb  010_parameterizable_behavior_trees.ipynb
services/angular-hmi/: BUILD  README.md  manifest.textproto  server.go
services/angular-hmi/angular-app/: README.md  angular.json  package.json  tsconfig.json
services/angular-hmi/angular-app/src/: index.html  main.ts  styles.css
services/angular-hmi/angular-app/src/app/: app-config.ts  app.ts
services/angular-hmi/local/: runtime_context.txtpb
services/configurable_service/: BUILD  configurable_service.proto  configurable_service.py  configurable_service_manifest.textproto  default_config_values.textproto
services/hmi/: .bazelignore  .gitignore  BUILD  README.md  WORKSPACE  manifest.textproto  server.go
services/hmi/.devcontainer/: devcontainer.json
services/hmi/frontend/: index.html
services/hmi/hmi/: manifest.textproto  server.go
services/hmi/hmi/processes/: process_2.pb
services/hmi/hmi/testdata/: image_files.yaml
services/hmi/local/: runtime_context.txtpb
services/hmi/processes/: process_1.pb  process_fail.pb
services/hmi/testdata/: image_files.yaml
services/hmi_python/: BUILD  manifest.textproto  server.py
services/hmi_python/frontend/: index.html  script.js
services/hmi_python/testdata/: image_files.yaml
services/static-angular/: BUILD  README.md  manifest.textproto  server.go
services/static-angular/angular-app/: angular.json
services/static-angular/angular-app/src/: index.html  main.ts  styles.css
services/static-angular/angular-app/src/app/: app.ts
services/stopwatch/: BUILD  requirements.txt  start_stopwatch.manifest.textproto  start_stopwatch.proto  start_stopwatch.py  start_stopwatch_test.py  stop_stopwatch.manifest.textproto  stop_stopwatch.proto  stop_stopwatch.py  stop_stopwatch_test.py  stopwatch_integration_test.py  stopwatch_service.proto  stopwatch_service.py  stopwatch_service_manifest.textproto
skills/read_joint_positions_from_opcua_equipment/: BUILD  read_joint_positions_from_opcua_equipment.manifest.textproto  read_joint_positions_from_opcua_equipment.proto  read_joint_positions_from_opcua_equipment.py  read_joint_positions_from_opcua_equipment_test.py
skills/say_skill/: BUILD  say_skill.cc  say_skill.h  say_skill.proto  say_skill.py  say_skill_cc.manifest.textproto  say_skill_py.manifest.textproto  say_skill_test.cc  say_skill_test.py
skills/scan_barcodes/: BUILD  requirements.txt  scan_barcodes.cc  scan_barcodes.h  scan_barcodes.proto  scan_barcodes.py  scan_barcodes_cc.manifest.textproto  scan_barcodes_py.manifest.textproto  scan_barcodes_test.py
skills/start_stopwatch/: BUILD  start_stopwatch.manifest.textproto  start_stopwatch.proto  start_stopwatch.py  start_stopwatch_test.py
skills/stop_stopwatch/: BUILD  stop_stopwatch.cc  stop_stopwatch.h  stop_stopwatch.proto  stop_stopwatch.py  stop_stopwatch_cc.manifest.textproto  stop_stopwatch_py.manifest.textproto  stop_stopwatch_test.cc  stop_stopwatch_test.py
skills/use_world/: BUILD  use_world.cc  use_world.h  use_world.proto  use_world.py  use_world_cc.manifest.textproto  use_world_integration_test.py  use_world_py.manifest.textproto  use_world_test.py
skills/validate_pose/: BUILD  validate_pose.cc  validate_pose.h  validate_pose.proto  validate_pose.py  validate_pose_cc.manifest.textproto  validate_pose_py.manifest.textproto  validate_pose_test.py
skills/wiggle_joint/: BUILD  wiggle_joint.cc  wiggle_joint.h  wiggle_joint.proto  wiggle_joint.py  wiggle_joint_cc.manifest.textproto  wiggle_joint_py.manifest.textproto  wiggle_joint_test.py
skills/write_joint_positions_to_opcua_equipment/: BUILD  example_opcua_equipment_config.pbtxt  write_joint_positions_to_opcua_equipment.manifest.textproto  write_joint_positions_to_opcua_equipment.proto  write_joint_positions_to_opcua_equipment.py  write_joint_positions_to_opcua_equipment_test.py
